--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,27 @@ body,
     height: 100%;
     margin: 0;
 }
+
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 700px;
+    height: 300px;
+}
+
+div {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: #daa520;
+}
+
+div:nth-child(2),
+div:nth-child(4) {
+    align-self: center;
+}
+
+div:nth-child(3) {
+    align-self: flex-end;
+}
